kubernetes-manifest/istio/mtls.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: emart-mtls
  namespace: emart-app
spec:
  mtls:
    mode: STRICT
