kubernetes-manifest/istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: emart-istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - emart.xlice.com.ng
    tls:
      httpsRedirect: true # sends 301 redirect for http requests
  - port:
      number: 443
      name: https-443
      protocol: HTTPS
    hosts:
    - emart.xlice.com.ng
    tls:
      mode: SIMPLE # enables HTTPS on this port
      credentialName: emart-tls-secret # fetches certs from Kubernetes secret
