kubernetes-manifest/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: emart-virtual-svc
  namespace: emart-app
spec:
  hosts:
  - emart.xlice.com.ng
  gateways:
  - istio-system/emart-istio-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: api-svc
        port:
          number: 5000

  - match:
    - uri:
        prefix: /webapi
    route:
    - destination:
        host: webapi-svc
        port:
          number: 9000

  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: client-svc
        port:
          number: 4200
